# pycon_apac2025

./: README.md  pyproject.toml
data/: 2024.csv  data_a_small.csv  data_b.csv
