[tool.poetry]
name = "pycon-apac2025"
version = "0.1.0"
description = ""
authors = ["ninz <nreclarin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.4"
evidently = "^0.6.0"
matplotlib = "^3.10.0"
xgboost = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
